# diffusion2D

./: README.md  backup_setup.cfg  pyproject.toml  setup.cfg  setup.py
src/: diffusion2d.py  output_.py
