[build-system]
requires = ["setuptools"]

[project]
name = "diffusion2Dsod"
description = "2D thermal diffusion simmulation"
readme = "README.md"
requires-python = ">=3.6"
keywords = ["2D Thermal simulation"]
classifiers = [
    "Programming Language :: Python :: 3"
]
dependencies = [
    "requests",
    'importlib-metadata; python_version<"3.8"',
]
dynamic = ["version"]

[project.scripts]
diffusion2D_sod = "diffusion2Dsod.src:diffusion2D.py"
